Fix margin bottom on safari

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,5 @@
 html, body{
 	background: $s_white;
-	height: 100%;
 	width: 100%;
 	position: relative;
 	font-family: 'Source Sans Pro', sans-serif;
